--- a/assets/sass/mixin/_font.scss
+++ b/assets/sass/mixin/_font.scss
@@ -1,4 +1,4 @@
-@mixin font($fs, $fw) {
-  font-size: $fs;
-  font-weight: $fw;
-}
+// @mixin font($fs, $fw) {
+//   font-size: $fs;
+//   font-weight: $fw;
+// }
