--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,5 @@
 @import "./common/common";
-@import "./variable/variable";
-@import "./pages/home";
+// @import "./mixin/font";
+@import "./pages/home"
 // @import "./pages/about";
 
