--- a/assets/sass/common/_common.scss
+++ b/assets/sass/common/_common.scss
@@ -1,7 +1,3 @@
-@import "../variable/variable";
-@import "../mixin/font";
-@import "../mixin/line-limit";
-
 /*
   Theme Name: Digiso
   Support: 
@@ -35,19 +31,27 @@
 	01. Variable CSS start
 ===============================*/
 
-:root {
-  --font-primary: #{$font-primary};
-  --font-secondary: #{$font-secondary};
-  --primary: #{$primary};
-  --black: #{$black};
-  --black-two: #{$black-two};
-  --black-three: #{$black-three};
-  --white: #{$white};
-  --paragraph: #{$paragraph};
-  --font-size: #{$font-size};
-  --font-weight: #{$font-weight};
-  --line-height: #{$line-height};
-  --transition: #{$transition};
+:root,
+[data-bs-theme=light] {
+  --bs-body-font-primary: "Sora", sans-serif;
+  --bs-heading-font-secondary: "Bricolage Grotesque", sans-serif;
+  --bs-primary: #D6FFC8;
+  --bs-text-color1: #10171D;
+  --bs-text-color2: #18212A;
+  --bs-text-color3: #171717;
+  --bs-text-color4: #ABABAB;
+  --bs-bg-color1: #F8F8F8;
+  --bs-border-color1: #E8E8E8;
+  --bs-border-color2: #E6E6E6;
+  --bs-border-color3: rgba(193, 193, 193, 0.20);;
+  --bs-border-color4: #ABABAB;
+  --bs-white: #ffffff;
+  --bs-white2: #FBFBFB;
+  --bs-paragraph: #666666;
+  --bs-body-font-size: 16px;
+  --bs-body-font-weight: 400;
+  --bs-body-line-height: 160%;
+  --bs-transition: all linear 0.2s;
 }
 
 /*=============================
@@ -62,11 +66,11 @@
 }
 
 body {
-  font-family: var(--font-primary);
-  font-size: var(--font-size);
-  font-weight: var(--font-weight);
-  line-height: var(--line-height);
-  color: var(--black);
+  font-family: var(--bs-body-font-primary);
+  font-size: var(--bs-body-font-size);
+  font-weight: var(--bs-body-font-weight);
+  line-height: var(--bs-body-line-height);
+  color: var(--bs-text-color1);
   overflow-x: hidden;
 }
 
@@ -112,29 +116,29 @@ ol {
 }
 
 p {
-  font-size: var(--font-size);
-  font-weight: var(--font-weight);
-  line-height: var(--line-height);
-  color: var(--paragraph);
+  font-size: var(--bs-body-font-size);
+  font-weight: var(--bs-body-font-weight);
+  line-height: var(--bs-body-line-height);
+  color: var(--bs-paragraph);
   margin: 0;
   padding: 0;
 }
 
 *::-moz-selection {
-  background: var(--black);
-  color: var(--white);
+  background: var(--bs-text-color1);
+  color: var(--bs-white);
   text-shadow: none;
 }
 
 ::-moz-selection {
-  background: var(--black);
-  color: var(--white);
+  background: var(--bs-text-color1);
+  color: var(--bs-white);
   text-shadow: none;
 }
 
 ::selection {
-  background: var(--black);
-  color: var(--white);
+  background: var(--bs-text-color1);
+  color: var(--bs-white);
   text-shadow: none;
 }
 
@@ -145,15 +149,16 @@ p {
 /* section title */
 .section-title-block {
   .section-sub-title {
-    color: var(--paragraph);
+    color: var(--bs-paragraph);
     font-size: 20px;
     font-weight: 500;
     text-transform: uppercase;
     margin-bottom: 26px;
   }
+
   .section-title {
-    color: var(--black);
-    font-family: var(--font-secondary);
+    color: var(--bs-text-color1);
+    font-family: var(--bs-heading-font-secondary);
     font-size: 48px;
     font-weight: 600;
     line-height: 120%;
@@ -165,10 +170,10 @@ p {
 .view-all-btn {
   width: 149px;
   height: 149px;
-  fill: var(--white);
-  border: 1px solid #E6E6E6;
+  background: var(--bs-white);
+  border: 1px solid var(--bs-border-color2);
   border-radius: 50%;
-  color: var(--black-two);
+  color: var(--bs-text-color2);
   text-align: center;
   font-size: 16px;
   font-style: normal;
@@ -179,4 +184,12 @@ p {
   justify-content: center;
   align-items: center;
   padding: 20px;
+}
+
+.view-all-btn2 {
+  color: var(--bs-text-color1);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 160%;
+  padding-right: 10px;
 }
