--- a/assets/sass/components/_services.scss
+++ b/assets/sass/components/_services.scss
@@ -4,8 +4,8 @@
 
 .services-one-area {
 	.container {
-		border-right: 1px solid #E8E8E8;
-		border-left: 1px solid #E8E8E8;
+		border-right: 1px solid var(--bs-border-color1);
+		border-left: 1px solid var(--bs-border-color1);
 		padding: 0;
 		padding-top: 177px;
 		padding-bottom: 176px;
@@ -13,7 +13,7 @@
 		&::before {
 			width: 1px;
 			height: 100%;
-			background-color: #E8E8E8;
+			background-color: var(--bs-border-color1);
 			position: absolute;
 			top: 0;
 			left: 500px;
@@ -41,7 +41,7 @@
 
 		.services-one-item {
 			padding: 45px 106px 45px 106px;
-			border-top: 1px solid #E8E8E8;
+			border-top: 1px solid var(--bs-border-color1);
 
 			a {
 				display: flex;
@@ -51,11 +51,11 @@
 			}
 
 			&:last-child {
-				border-bottom: 1px solid #E8E8E8;
+				border-bottom: 1px solid var(--bs-border-color1);
 			}
 
 			.number {
-				color: #ABABAB;
+				color: var(--bs-text-color4);
 				font-size: 24px;
 				font-weight: 600;
 				line-height: normal;
@@ -65,8 +65,8 @@
 			}
 
 			.title {
-				color: var(--black);
-				font-family: var(--font-secondary);
+				color: var(--bs-text-color1);
+				font-family: var(--bs-heading-font-secondary);
 				font-size: 32px;
 				font-weight: 600;
 				line-height: 132%;
