--- a/assets/sass/components/_video.scss
+++ b/assets/sass/components/_video.scss
@@ -2,14 +2,13 @@
 	05. Play Video area start
 ===============================*/
 .play-video-one-area {
-	margin-top: 135px;
 
 	.play {
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 		text-align: center;
-		transition: $transition;
+		transition: var(--bs-transition);
 
 		.vidplay {
 			span {
@@ -17,7 +16,7 @@
 				top: 50%;
 				left: 50%;
 				transform: translate(-50%, -50%);
-				color: var(--white);
+				color: var(--bs-white);
 				font-size: 24px;
 				font-weight: 500;
 				line-height: 150%;
