--- a/assets/sass/common/_common.scss
+++ b/assets/sass/common/_common.scss
@@ -43,7 +43,8 @@
   --bs-bg-color1: #F8F8F8;
   --bs-border-color1: #E8E8E8;
   --bs-border-color2: #E6E6E6;
-  --bs-border-color3: rgba(193, 193, 193, 0.20);;
+  --bs-border-color3: rgba(193, 193, 193, 0.20);
+  ;
   --bs-border-color4: #ABABAB;
   --bs-white: #ffffff;
   --bs-white2: #FBFBFB;
@@ -193,3 +194,7 @@ p {
   line-height: 160%;
   padding-right: 10px;
 }
+
+// .theme-btn{
+
+// }
