--- a/assets/sass/components/_banner.scss
+++ b/assets/sass/components/_banner.scss
@@ -41,7 +41,7 @@
 
 		.banner-title {
 			color: var(--bs-text-color1);
-			font-family: var(--bs-heading-font-secondary);
+			font-family: var(--bs-font-secondary);
 			font-size: 96px;
 			font-weight: 700;
 			line-height: 108px;
