--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -26,7 +26,7 @@
 					font-size: 18px;
 					font-weight: 500;
 					color: var(--bs-text-color3);
-					font-family: var(--bs-heading-font-secondary);
+					font-family: var(--bs-font-secondary);
 				}
 
 				.sub-menu {
@@ -57,7 +57,7 @@
 							font-size: 18px;
 							font-weight: 500;
 							color: var(--bs-text-color3);
-							font-family: var(--bs-heading-font-secondary);
+							font-family: var(--bs-font-secondary);
 							display: block;
 							background-color: transparent;
 							width: 100%;
