--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -11,3 +11,5 @@
 @import "../components/testimonial";
 @import "../components/blog";
 @import "../components/footer";
+@import "../components/page-header";
+@import "../components/subscribe-now";
