--- a/assets/sass/components/_blog.scss
+++ b/assets/sass/components/_blog.scss
@@ -59,7 +59,7 @@
 				min-height: 143px;
 
 				.title {
-					font-family: var(--bs-heading-font-secondary);
+					font-family: var(--bs-font-secondary);
 					font-size: 32px;
 					font-weight: 600;
 					line-height: 132%;
