--- a/assets/sass/components/_features.scss
+++ b/assets/sass/components/_features.scss
@@ -22,7 +22,7 @@
 	.feature-title {
 		margin-bottom: 16px;
 		color: var(--bs-text-color1);
-		font-family: var(--bs-heading-font-secondary);
+		font-family: var(--bs-font-secondary);
 		font-size: 32px;
 		font-weight: 600;
 		line-height: 132%;
