--- a/assets/sass/components/_services.scss
+++ b/assets/sass/components/_services.scss
@@ -66,7 +66,7 @@
 
 			.title {
 				color: var(--bs-text-color1);
-				font-family: var(--bs-heading-font-secondary);
+				font-family: var(--bs-font-secondary);
 				font-size: 32px;
 				font-weight: 600;
 				line-height: 132%;
