--- a/assets/sass/components/_text-slider.scss
+++ b/assets/sass/components/_text-slider.scss
@@ -2,7 +2,7 @@
 	05. Text slider area start
 ===============================*/
 .text-slider-area {
-	background-color: var(--bs-text-color1);
+	background-color: var(--bs-bg-color2);
 	padding: 46px 0;
 
 	.slider-main {
@@ -15,7 +15,7 @@
 
 			.title {
 				color: var(--bs-white2);
-				font-family: var(--bs-heading-font-secondary);
+				font-family: var(--bs-font-secondary);
 				font-size: 85px;
 				font-weight: 700;
 				line-height: 120%;
