--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,6 @@
 @import "./common/common";
 // @import "./mixin/font";
-@import "./pages/home"
-// @import "./pages/about";
+@import "./pages/home";
+@import "./pages/error404";
+@import "./pages/contact";
 
