--- a/assets/sass/pages/_contact.scss
+++ b/assets/sass/pages/_contact.scss
@@ -52,5 +52,62 @@
 }
 
 .contact-form-section {
-  
+  margin-top: 134px;
+
+  .gmap {
+    iframe {
+      width: 100%;
+      height: 875px;
+      margin-bottom: -20px;
+    }
+  }
+
+  .form-main {
+    padding: 64px 50px;
+    max-width: 964px;
+    height: 651px;
+    flex-shrink: 0;
+    background: var(--bs-white);
+    box-shadow: 0px 4px 11.9px 0px rgba(201, 201, 201, 0.25);
+
+    .form-title {
+      margin-bottom: 73px;
+      color: var(--bs-text-color1);
+      font-family: var(--bs-font-secondary);
+      font-size: 32px;
+      font-weight: 600;
+      line-height: 132%;
+    }
+
+    .input-group {
+      margin-bottom: 44px;
+    }
+  }
+}
+
+.input-group {
+  .form-control {
+    color: var(--bs-paragraph);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 160%;
+    border: 0;
+    border-bottom: 1px solid var(--bs-border-color5);
+    padding-bottom: 12px;
+    &:focus{
+      border-color: var(--bs-border-color7);
+    }
+
+    &:focus {
+      box-shadow: none;
+    }
+  }
+
+  .form-textarea {
+    min-height: 122px;
+    resize: none;
+    &:focus{
+      border-color: var(--bs-border-color7);
+    }
+  }
 }
