--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -13,3 +13,4 @@
 @import "../components/footer";
 @import "../components/page-header";
 @import "../components/subscribe-now";
+@import "../components/lines";
